--- a/index.html
+++ b/index.html
@@ -142,20 +142,20 @@ $(document).ready(function () {
 </thead>
 <tbody>
 <tr class="odd">
-<td>Phillies</td>
-<td>National</td>
+<td>Big Bang</td>
+<td>VIPs</td>
 </tr>
 <tr class="even">
-<td>Yankees</td>
-<td>American</td>
+<td>EXO</td>
+<td>Exo-l</td>
 </tr>
 <tr class="odd">
-<td>Cubs</td>
-<td>National</td>
+<td>DBSK</td>
+<td>Cassies</td>
 </tr>
 <tr class="even">
-<td>Red Sox</td>
-<td>American</td>
+<td>Super Junior</td>
+<td>Elfs</td>
 </tr>
 </tbody>
 </table>
