--- a/index.html
+++ b/index.html
@@ -120,11 +120,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>Filtering Rows and Comlums</p>
+<div id="filtering-rows-and-comlums" class="section level1">
+<h1>Filtering Rows and Comlums</h1>
 <p>With SQL we can filter coloumns with SELECT and rows with WHERE. To show this I will use the Lahman package on RStudio, which is a baseball database. First, we need to need to install the two packages: Lahman and sqldf.</p>
 <pre class="r"><code>library(Lahman)
 library(sqldf)</code></pre>
-<p>Suppose we want to see the total number of homeruns for the Yankees in 1927. We could write the following</p>
+<p>Suppose we want to see the total number of homeruns for the Yankees in 1927. We could write the following:</p>
 <pre class="r"><code>query&lt;-&quot;SELECT playerID,yearID,teamID,HR From Batting
 Where teamID='NYA' and yearID=1927&quot;
 sqldf(query)</code></pre>
@@ -155,7 +156,7 @@ sqldf(query)</code></pre>
 ## 24 thomamy01   1927    NYA  0
 ## 25  weraju01   1927    NYA  1</code></pre>
 <p>Batting colnames(Batting)</p>
-<p>Here we will learn how to create a query for New York Yankee player that have more than 40 homeruns</p>
+<p>Here we will learn how to create a query for New York Yankee players that have more than 40 homeruns.</p>
 <pre class="r"><code>query&lt;-&quot;SELECT playerID,yearID,teamID,HR From Batting
 Where teamID='NYA' and HR&gt;=40&quot;
 sqldf(query)</code></pre>
@@ -190,7 +191,7 @@ sqldf(query)</code></pre>
 ## 28 rodrial01   2007    NYA 54
 ## 29 grandcu01   2011    NYA 41
 ## 30 grandcu01   2012    NYA 43</code></pre>
-<p>Examples of player having more than 40HR but less than 60strikeouts(SO)</p>
+<p>We will narrow the output more with a query example of players having more than 40 homeruns (HR) but less than 60 strikeouts(SO)</p>
 <pre class="r"><code>query1&lt;-&quot;SELECT playerID,yearID,teamID,SO,HR From Batting
 Where SO&lt;60 and HR&gt;40&quot;
 sqldf(query1)</code></pre>
@@ -223,7 +224,7 @@ sqldf(query1)</code></pre>
 ## 26 bondsba01   2004    SFN 41 45
 ## 27 pujolal01   2004    SLN 52 46
 ## 28 pujolal01   2006    SLN 50 49</code></pre>
-<p>Instances of Phillies in the 1970’s hitting more than 30 homeruns</p>
+<p>We are producing the instances of Phillies in the 1970’s hitting more than 30 homeruns</p>
 <pre class="r"><code>query2&lt;-&quot;SELECT playerID,yearID,teamID,HR From Batting
 Where yearID&gt;1970 and yearID&lt;1979 and HR&gt;=30 and teamID='PHI'&quot;
 sqldf(query2)</code></pre>
@@ -237,7 +238,10 @@ sqldf(query2)</code></pre>
 ## 7 luzingr01   1977    PHI 39
 ## 8 schmimi01   1977    PHI 38
 ## 9 luzingr01   1978    PHI 35</code></pre>
-<p>Ranking Data For this example we will present Player hits with more than 50 homeruns but lets have players with the most homeruns at the top</p>
+</div>
+<div id="ranking-data" class="section level1">
+<h1>Ranking Data</h1>
+<p>For this example we will present Player hits with more than 50 homeruns but lets have players with the most homeruns at the top</p>
 <pre class="r"><code>query3&lt;-&quot;SELECT playerID,yearID,teamID,HR From Batting
 Where HR&gt;=50
 Order By HR DESC&quot;
@@ -356,7 +360,11 @@ sqldf(query4)</code></pre>
 ## 63 holmeto01   1945    BSN  9 636
 ## 64 boudrlo01   1948    CLE  9 560
 ## 65 mitchda01   1952    CLE  9 511</code></pre>
-<p>Aggregation Aggreation is the clustering of pieces to output one final result. This can be achieved my using grouping and Sum and average. Continuing with our use of the Lahman database Example 1 Find Babe Ruth’s career homerun total and squash it into one no comma after homerun</p>
+</div>
+<div id="aggregation" class="section level1">
+<h1>Aggregation</h1>
+<p>Aggreation is the clustering of pieces to output one final result. This can be achieved my using grouping and Sum and average. Continuing with our use of the Lahman database we will:</p>
+<p>Find Babe Ruth’s career homerun total and squash it into one no comma after homerun</p>
 <pre class="r"><code>query5&lt;-&quot;select playerID, sum(HR) From Batting
 WHERE playerID='ruthba01'
 Group by playerID&quot;
@@ -364,7 +372,7 @@ Group by playerID&quot;
 sqldf(query5)</code></pre>
 <pre><code>##   playerID sum(HR)
 ## 1 ruthba01     714</code></pre>
-<p>find the homerun totals of all players but limit the display to only those that hit 600 or more. The players with the highest total at the top where is filtering before group and having is grouping after</p>
+<p>Find the homerun totals of all players but limit the display to only those that hit 600 or more. The players with the highest total at the top where is filtering before group and having is grouping after</p>
 <pre class="r"><code>query6&lt;-&quot;select playerID, sum(HR) From Batting
 Group by playerID
 Having sum(HR)&gt;600
@@ -380,6 +388,9 @@ sqldf(query6)</code></pre>
 ## 6 griffke02     630
 ## 7 thomeji01     612
 ## 8  sosasa01     609</code></pre>
+</div>
+<div id="ordering" class="section level1">
+<h1>Ordering</h1>
 <p>Here we will find the players with the highest homerun average over their career. We will filter out those who have an average of more than 30 HR showing players with the best average at the top avg() #max() #min()</p>
 <pre class="r"><code>query7&lt;-&quot;select playerID, avg(HR) From Batting
 Group by playerID
@@ -401,7 +412,10 @@ sqldf(query7)</code></pre>
 ## 11 rodrial01 31.63636
 ## 12 schmimi01 30.44444
 ## 13 abreujo02 30.33333</code></pre>
-<p>Joins this is the joining of two tables using the common variable in both tables using Inner Join and On Table1.variable=Table2.variable. When mentioning the variable I have to specify which table it is coming from as seen in the Where table.variable example list firstname, lastname, year, teamID and HR colnames(master) #to find other details</p>
+</div>
+<div id="joins" class="section level1">
+<h1>Joins</h1>
+<p>This is the joining of two tables using the common variable in both tables using Inner Join and “On Table1.variable=Table2.variable.” When mentioning the variable I have to specify which table it is coming from as seen in the Where table.variable.</p>
 <pre class="r"><code>query8&lt;-&quot;select nameFirst, nameLast, yearID, teamID, HR 
 From Batting Inner Join Master
 On Batting.playerID=Master.playerID
@@ -474,7 +488,7 @@ sqldf(query9)</code></pre>
 ## 34    Willie      Mays   1955    NY1 51
 ## 35     Cecil   Fielder   1990    DET 51
 ## 36    Andruw     Jones   2005    ATL 51</code></pre>
-<p>Babe ruth with his team name using Teams database</p>
+<p>Our next example is showing Babe Ruth with his team name using the Teams database</p>
 <pre class="r"><code>query10&lt;-&quot;Select playerID, Batting.yearID, name, Batting.HR 
 From Batting Inner Join Teams 
 On Batting.teamID=Teams.teamID AND Batting.yearID=Teams.yearID
@@ -504,7 +518,7 @@ sqldf(query10)</code></pre>
 ## 20 ruthba01   1916   Boston Red Sox  3
 ## 21 ruthba01   1917   Boston Red Sox  2
 ## 22 ruthba01   1914   Boston Red Sox  0</code></pre>
-<p>joins List all the players named Bob who averaged more than one million dollars per year in salary for their career. Include Last Name We will use colnames: Master and Salaries</p>
+<p>For our next example we will list all the players named Bob who averaged more than one million dollars per year in salary for their career, including Last Name. We will use colnames: Master and Salaries</p>
 <pre class="r"><code>query11&lt;- &quot;Select nameFirst,nameLast,nameLast,avg(salary) 
 From Master Inner Join Salaries
 On Master.playerID=Salaries.playerID
@@ -521,6 +535,7 @@ sqldf(query11)</code></pre>
 ## 6       Bob Tewksbury Tewksbury     1288182
 ## 7       Bob     Welch     Welch     1930417
 ## 8       Bob   Wickman   Wickman     2635813</code></pre>
+</div>
 
 
 
